--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,8 @@ flake8 = "^6.1.0"
 mypy = "^1.5.1"
 pytest = "^7.4.0"
 scikit-learn = "^1.4.1.post1"
+tenacity = "^9.1.2"
+pydantic = "^2.11.3"
 
 
 [build-system]
