--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ pytest = "^7.4.0"
 scikit-learn = "^1.4.1.post1"
 tenacity = "^9.1.2"
 pydantic = "^2.11.3"
+pyarrow = "^20.0.0"
+seaborn = "^0.13.2"
 
 
 [build-system]
